# ddale_ardrone_nav

./: CMakeLists.txt  README.md  package.xml
data/camera_info_own/: ardrone_front.yaml
launch/: ardrone_driver.launch  ardrone_marker.launch  ardrone_navigation.launch  ardrone_tagtracker.launch  ardrone_tagtracker_aruco.launch  ardrone_test.launch
src/: .test.cpp.swp  autopilot.cpp  marker.cpp  marker_test.cpp  nav.cpp  test.cpp  test_boost.cpp  test_c++11.cpp  test_old.cpp
